--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore src"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "axios": "^0.21.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
