--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "axios": "^0.21.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
